# Tilt-rotor_Simulator

./: README.md
Testes/: TesteFrequencia.txt
Tilt-rotor Modelling and Control/Modelling/: ArthurModel.m  ModelagemTiltrotor.nb  ToMatlabExamples.nb  matrizC.m  modeloLinearProvant.nb
Tilt-rotor Modelling and Control/lqr-tilt/: ArthurModelbp.m  DadosSimulação  Data.m  FK.m  LinearAnalisys.m  Linearizacao.slx.autosave  Medidas.m  ModelLinear2.m  TiltFeedforward.m  TiltFeedforward2.m  Yest.m  matrizB.m  matrizM.m  modeloLinearProvant.nb  modelonaolinear.m  modelonaolinear2.m  simLQR.slx  simLQR.slx.original  simLQR.slx.r2013a  vetorG.m
aerodinamica/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
aerodinamica/include/aerodinamica/: aerodinamica.h  aerodinamica.h~
aerodinamica/src/: aerodinamica.cpp  aerodinamica.cpp~
beginner_tutorials/: CMakeLists.txt~  package.xml  package.xml~
hector_gazebo_plugins/: CMakeLists.txt  CMakeLists.txt~  Log4cxxConfig_servo.xml~  package.xml~
hector_gazebo_plugins/LogConfig/: Log4cxxConfig_aerodinamica.xml  Log4cxxConfig_aerodinamica.xml~  Log4cxxConfig_gps.xml  Log4cxxConfig_gps.xml~  Log4cxxConfig_imu.xml  Log4cxxConfig_imu.xml~  Log4cxxConfig_magnetic.xml  Log4cxxConfig_magnetic.xml~  Log4cxxConfig_servo.xml  (+3 more)
log/: appxLogFile_aerodinamica.txt  appxLogFile_imu.txt  appxLogFile_servo.txt  appxLogFile_sonar.txt
pfc_gui/: CMakeLists.txt  CMakeLists.txt~  Passos.txt  Passos.txt~  package.xml  package.xml~
servo_motor/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sw2urdf/: .hg_archival.txt
tilt/: CMakeLists.txt  CMakeLists.txt~  model.config  package.xml  package.xml~
tilt_controller/: CMakeLists.txt  CMakeLists.txt~  input.txt  output.txt  package.xml  package.xml~
tilt_controller/src/: main.cpp  main.cpp~  main_ant (copy).cpp
tilt_srv/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
(+148 files in other folders)
